# mnist-classifier

./: CMakeLists.txt  build.sh  docker-compose.yml  run_integration_tests.sh
backend/: CMakeLists.txt  Dockerfile  README.md
backend/src/: main.cpp
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.jsx  DigitCanvas.jsx  PredictionChart.jsx
nnet/: CMakeLists.txt  README.md
nnet/include/nnet/: nnet.hpp
nnet/lib/cmake/nnet/: nnet_export-noconfig.cmake  nnet_export.cmake
nnet/src/: nnet.cpp
nnet/test/: nnet_test.cpp
test/integration/: backend_test.sh
